# RustOpenGLTemplate

./: Cargo.toml  README.md
resources/shaders/: basic.vert
template_app/: Cargo.toml
template_app/src/: app.rs  main.rs
template_core/: Cargo.toml
template_core/src/: errors.rs  lib.rs
template_graphics/: Cargo.toml
template_graphics/src/: context.rs  lib.rs  mesh.rs  renderer.rs  shader.rs  window.rs
