[package]
name = "template_app"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
template_core = { path = "../template_core" }
template_graphics = { path = "../template_graphics" }
nalgebra = { workspace = true }
winit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }